--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "uuid": "^3.3.3",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "write-json-file": "^4.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
