--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.4",
     "artyom.js": "^1.0.6",
     "bootstrap": "^4.3.1",
+    "leapjs": "^0.6.4",
     "lodash": "^4.17.15",
     "rxjs": "~6.4.0",
     "socket.io-client": "^2.2.0",
