--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "animate.css": "^3.7.2",
     "artyom.js": "^1.0.6",
     "bootstrap": "^4.3.1",
     "jquery": "^1.11.3",
